# inline_colorization

./: Cargo.toml  LICENSE  README.md
examples/: all_codes.rs
src/: lib.rs
